--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <div class="header_left">
-            <h1>Ім'я Прізвище</h1>
+            <h1>Даніїл Рожко</h1>
             <div class="bio">
-                <p>Тут напиши що-небудь про себе :)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h5>Вітаю вас на своїй сторінці сайту!</h5>
+                <h6>Мене звати Даніїл,я майбутній програміст з Одеської області.Люблю подорожувати,й в майбутньому мрію створити корисні ІТ-рішення.Обожнюю спорт і вірю, що кожен день - нова можливість для розвитку:)</h6>
             </div>
         </div>
         <div class="header_right">
@@ -26,13 +26,13 @@
             <h1>Навички</h1>
             <div class="section_row">
                 <div class="section_item">
-                    <img src="html_logo.png" alt="">
+                   <a href="http://html.com/"><img src="html_logo.png" alt=""></a>
                 </div>
                 <div class="section_item">
-                    <img src="css_logo.png" alt="">
+                    <a href="https://www.free-css.com/"><img src="css_logo.png" alt=""></a>
                 </div>
                 <div class="section_item">
-                    <img src="js_logo.png" alt="">
+                    <a href="http://js.com/"><img src="js_logo.png" alt=""></a>
                 </div>
             </div>
         </section>
@@ -40,7 +40,8 @@
             <h1>Проєкти</h1>
             <div class="section_row">
                 <div class="section_item github">
-                    <img src="github_logo.png" alt="">
+               <a href="http://github.com/"><img src="github_logo.png" alt=""></a>
+                 
                 </div>
             </div>
         </section>
@@ -48,13 +49,13 @@
             <h1>Контакти</h1>
             <div class="section_row">
                 <div class="section_item">
-                    <img src="Instagram_icon.png.webp" alt="">
+                   <a href="http://instagram.com/"><img src="Instagram_icon.png.webp" alt=""></a>
                 </div>
                 <div class="section_item">
-                    <img src="tg_logo.svg" alt="">
+                    <a href="http://telegram.org/"><img src="tg_logo.svg" alt=""></a>                  
                 </div>
                 <div class="section_item">
-                    <img src="email_logo.png" alt="">
+                   <a href="http://gmail.com/"><img src="email_logo.png" alt=""></a>
                 </div>
             </div>
         </section>
